Added Header Comment

--- a/Account Record Page Datatables/force-app/main/default/classes/AccountHistoryController.cls
+++ b/Account Record Page Datatables/force-app/main/default/classes/AccountHistoryController.cls
@@ -1,3 +1,9 @@
+/**
+ * Controller class for the Account History data-table.
+ * 
+ * Last Modified by: Scott Gillen
+ * Date:             22-Mar-2021
+ */
 public with sharing class AccountHistoryController {
     
     @AuraEnabled(cacheable=true)
