--- a/Account Record Page Datatables/force-app/main/default/classes/AccountHistoryController.cls
+++ b/Account Record Page Datatables/force-app/main/default/classes/AccountHistoryController.cls
@@ -1,5 +1,6 @@
 /**
  * Controller class for the Account History data-table.
+ * This is another comment being made in Github.
  * 
  * Last Modified by: Scott Gillen
  * Date:             22-Mar-2021
