Added a header comment to the ContactDatatableController class

--- a/Account Record Page Datatables/force-app/main/default/classes/ContactDatatableController.cls
+++ b/Account Record Page Datatables/force-app/main/default/classes/ContactDatatableController.cls
@@ -1,3 +1,10 @@
+/**
+ * Apex class which contains simple methods for querying Contact records based on a parent AccountId
+ * Also contains a method for deleting a Contact in a simple DML operation.
+ * 
+ * Author: Scott Gillen (scottg159@gmail.com, scg984261)
+ * Last modified date: 22-Mar-2021
+ */
 public with sharing class ContactDatatableController {
 
     @AuraEnabled(cacheable=true)
